# quizgame-server/src/main/java/org/htw/quizgame/server/model/GameResult.java
@@ -1,26 +1,0 @@
-package org.htw.quizgame.server.model;
-
-
-import org.htw.quizgame.server.model.util.ConvertsTo;
-import org.htw.quizgame.server.model.util.SaveAs;
-import org.springframework.data.mongodb.core.mapping.Document;
-
-import java.math.BigDecimal;
-import java.util.LinkedHashMap;
-import java.util.Map;
-
-@Document
-public record GameResult(Map<User, BigDecimal> scoreBoard, LinkedHashMap<Question, Map<User, Boolean>> questions)
-    implements ConvertsTo<String>, SaveAs<GameResult> {
-
-  @Override
-  public String toDTO() {
-    // TODO
-    return "TODO";
-  }
-
-  @Override
-  public GameResult toEntity() {
-    return this;
-  }
-}
